--- a/passphrase-generator.html
+++ b/passphrase-generator.html
@@ -10,8 +10,9 @@
       margin: 0 auto;
       padding: 20px;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #fff;
-      border-radius: 12px;
+      border: 2px solid #1877f2;
+      border-radius: 10px;
+      background: #f4f8ff;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
